* Some minor changes like __DIR__ -> dirname(__FILE__) * Added simple ant script for workspace deploy

--- a/.hgignore
+++ b/.hgignore
@@ -3,3 +3,5 @@ syntax: regexp
 ^rest/services/utils/Config\.php$
 syntax: regexp
 ^api/services/utils/Config\.php$
+syntax: regexp
+^build\.properties$
