--- a/build.xml
+++ b/build.xml
@@ -4,7 +4,7 @@
 	<property file="build.properties" />
 
 	<target name="LH_deploylocal" description="Copy deployed app to local webserver">
-		<copy preservelastmodified="yes" todir="${local.server.path}/html5">
+		<copy preservelastmodified="yes" todir="${local.project.path}/">
 			<fileset dir="${BASE_DIR}" includes="**/*" />
 		</copy>
 	</target>
