--- a/build.xml
+++ b/build.xml
@@ -1,12 +1,87 @@
 <?xml version="1.0" ?>
-<project name="Babelium Project" default="LH_deploylocal">
+<project name="Babelium Project" default="LH_default">
 
 	<property file="build.properties" />
 
+	<target name="LH_default" description="Compile cairngorm + babelium js + copy deployed app to local webserver">
+		<antcall target="LH_compilecairngorm"/>
+		<antcall target="LH_compilebabeliumjs"/>
+		<antcall target="LH_deploylocal"/>
+	</target>
+	
 	<target name="LH_deploylocal" description="Copy deployed app to local webserver">
 		<copy preservelastmodified="yes" todir="${local.project.path}/">
-			<fileset dir="${BASE_DIR}" includes="**/*" />
+			<fileset dir="${BASE_DIR}" includes="**/*">
+				<exclude name="**/js/cairngorm/**"/>
+				<exclude name="**/js/babelium/**"/>
+			</fileset>
 		</copy>
+	</target>
+	
+	<target name="LH_compilecairngorm" description="Compiles CairngormJS MVC Framework">
+		<java jar="util/closure/compiler.jar" dir="${cairngorm.DIR}" fork="true">
+			<!-- <arg value="\-\-compilation_level"/><arg value="ADVANCED_OPTIMIZATIONS"/> -->
+			<arg value="--js"/><arg value="setup.js"/>
+			<arg value="--js"/><arg value="control/FrontController.js"/>
+			<arg value="--js"/><arg value="control/EventDispatcher.js"/>
+			<arg value="--js"/><arg value="control/CairngormEvent.js"/>
+			<arg value="--js"/><arg value="command/Command.js"/>
+			<arg value="--js"/><arg value="business/HTTPServices.js"/>
+			<arg value="--js"/><arg value="business/HTTPService.js"/>
+			<arg value="--js"/><arg value="business/ServiceLocator.js"/>
+			<arg value="--js"/><arg value="vo/ValueObject.js"/>
+			<arg value="--js_output_file"/><arg value="${cairngorm.OUTPUT_DIR}/cairngorm.js"/>
+		</java>
+	</target>
+	
+	<target name="LH_compilebabeliumjs" description="Compiles Babelium JS Framework">
+		<java jar="util/closure/compiler.jar" dir="${babeliumjs.DIR}" fork="true">
+			<!-- <arg value="\-\-compilation_level"/><arg value="ADVANCED_OPTIMIZATIONS"/> -->
+			<arg value="--js"/><arg value="setup.js"/>
+			<arg value="--js"/><arg value="encode.js"/>
+	
+			<arg value="--js"/><arg value="control/Controller.js"/>
+	
+			<arg value="--js"/><arg value="events/ViewChangeEvent.js"/>
+			<arg value="--js"/><arg value="events/LoginEvent.js"/>
+			<arg value="--js"/><arg value="events/HomepageEvent.js"/>
+			
+			<arg value="--js"/><arg value="commands/navigation/ViewPopStateCommand.js"/>
+			<arg value="--js"/><arg value="commands/navigation/ToggleLoginPopupCommand.js"/>
+	
+			<arg value="--js"/><arg value="commands/home/ViewHomeModuleCommand.js"/>
+			<arg value="--js"/><arg value="commands/home/LatestUploadedVideosCommand.js"/>
+			<arg value="--js"/><arg value="commands/home/SignedBestVideosCommand.js"/>
+			<arg value="--js"/><arg value="commands/home/LatestUserActivity.js"/>
+	
+			<arg value="--js"/><arg value="commands/exercises/ViewExerciseModuleCommand.js"/>
+	
+			<arg value="--js"/><arg value="commands/evaluation/ViewEvaluationModuleCommand.js"/>
+			
+			<arg value="--js"/><arg value="commands/subtitles/ViewSubtitleModuleCommand.js"/>
+			
+			<arg value="--js"/><arg value="commands/configuration/ViewConfigurationModuleCommand.js"/>
+	
+			<arg value="--js"/><arg value="commands/main/ViewAboutModuleCommand.js"/>
+	
+			<arg value="--js"/><arg value="commands/userManagement/ProcessLoginCommand.js"/>
+			<arg value="--js"/><arg value="commands/userManagement/SignOutCommand.js"/>
+			
+			<arg value="--js"/><arg value="business/HomepageDelegate.js"/>
+			<arg value="--js"/><arg value="business/ExerciseDelegate.js"/>
+			<arg value="--js"/><arg value="business/EvaluationDelegate.js"/>
+			<arg value="--js"/><arg value="business/SubtitleDelegate.js"/>
+			<arg value="--js"/><arg value="business/ConfigurationDelegate.js"/>
+			<arg value="--js"/><arg value="business/AboutDelegate.js"/>
+			<arg value="--js"/><arg value="business/UserDelegate.js"/>
+			<arg value="--js"/><arg value="business/AuthDelegate.js"/>
+			
+			<arg value="--js"/><arg value="vo/LoginVO.js"/>
+
+			<arg value="--js"/><arg value="cms.js"/>
+			<arg value="--js"/><arg value="init.js"/>
+			<arg value="--js_output_file"/><arg value="${babeliumjs.OUTPUT_DIR}/babelium.js"/>
+		</java>
 	</target>
 
 </project>
