--- a/build.xml
+++ b/build.xml
@@ -38,10 +38,12 @@
 		<java jar="util/closure/compiler.jar" dir="${babeliumjs.DIR}" fork="true">
 			<!-- <arg value="\-\-compilation_level"/><arg value="ADVANCED_OPTIMIZATIONS"/> -->
 			<arg value="--js"/><arg value="setup.js"/>
-			<arg value="--js"/><arg value="encode.js"/>
+
+			<arg value="--js"/><arg value="util/encode.js"/>
 	
 			<arg value="--js"/><arg value="control/Controller.js"/>
 			<arg value="--js"/><arg value="control/ExerciseManager.js"/>
+			<arg value="--js"/><arg value="control/ContentManagementSystem.js"/>
 	
 			<arg value="--js"/><arg value="events/ExerciseEvent.js"/>
 			<arg value="--js"/><arg value="events/HomepageEvent.js"/>
@@ -83,7 +85,6 @@
 			<arg value="--js"/><arg value="vo/LoginVO.js"/>
 			<arg value="--js"/><arg value="vo/ExerciseVO.js"/>
 
-			<arg value="--js"/><arg value="cms.js"/>
 			<arg value="--js"/><arg value="bootstrap.js"/>
 			<arg value="--js_output_file"/><arg value="${babeliumjs.OUTPUT_DIR}/babelium.js"/>
 		</java>
