A lot of changes: * code cleanup and refactorization * improved communication protocol with module gateway * added state manager

--- a/build.xml
+++ b/build.xml
@@ -44,6 +44,7 @@
 			<arg value="--js"/><arg value="control/Controller.js"/>
 			<arg value="--js"/><arg value="control/ExerciseManager.js"/>
 			<arg value="--js"/><arg value="control/ContentManagementSystem.js"/>
+			<arg value="--js"/><arg value="control/StateManager.js"/>
 	
 			<arg value="--js"/><arg value="events/ExerciseEvent.js"/>
 			<arg value="--js"/><arg value="events/HomepageEvent.js"/>
