Huge refactorization: * added new helper clases Module and Widget * added support for localization * started Evaluation module

--- a/config/Config.php.example
+++ b/config/Config.php.example
@@ -114,6 +114,11 @@ class Config implements ISingleton
 	public $webRootPath = "/var/www/babelia";
 	
 	
+	public $defaultLanguage = "en_US";
+	
+	// Evaluation module
+	public $restrictedEvaluation = false;
+	
 	/*
 	 * CONSTS
 	 */
