--- a/build.xml
+++ b/build.xml
@@ -46,6 +46,7 @@
 			<arg value="--js"/><arg value="control/ContentManagementSystem.js"/>
 			<arg value="--js"/><arg value="control/StateManager.js"/>
 	
+			<arg value="--js"/><arg value="events/EvaluationEvent.js"/>
 			<arg value="--js"/><arg value="events/ExerciseEvent.js"/>
 			<arg value="--js"/><arg value="events/HomepageEvent.js"/>
 			<arg value="--js"/><arg value="events/LoginEvent.js"/>
@@ -69,6 +70,9 @@
 			<arg value="--js"/><arg value="commands/exercises/WatchResponseCommand.js"/>
 	
 			<arg value="--js"/><arg value="commands/evaluation/ViewEvaluationModuleCommand.js"/>
+			<arg value="--js"/><arg value="commands/evaluation/ViewPendingAssesmentsCommand.js"/>
+			<arg value="--js"/><arg value="commands/evaluation/ViewCurrentlyAssessedToUserCommand.js"/>
+			<arg value="--js"/><arg value="commands/evaluation/ViewCurrentlyAssessedByUserCommand.js"/>
 			
 			<arg value="--js"/><arg value="commands/subtitles/ViewSubtitleModuleCommand.js"/>
 			
