--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Mon Oct 10 10:06:01 CEST 2011
+#Thu Feb 09 14:34:10 CET 2012
 eclipse.preferences.version=1
+encoding//locale/es_ES/myResources.properties=UTF-8
 encoding/<project>=UTF-8
