--- a/html5/.project
+++ b/html5/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Copy of babelium-html5</name>
+	<name>babelium-html5</name>
 	<comment></comment>
 	<projects>
 	</projects>
